@@ -3,6 +3,10 @@ Changelog started November 4, 2008.
 
 SMF Wiki 0.1                                                                   ?
 ================================================================================
+February 2009
+--------------------------------------------------------------------------------
+ ! Wikiparser lost some raw sections
+
 January 2009
 --------------------------------------------------------------------------------
  + Many code improvements
